Smol animal sounds

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
     </header>
     
     <main>
-
-        Make a Web App!
-        
+        <img id="cat-image" src="assets/kitten.webp">
+        <audio id='cat-sound' src='assets/cat-sound.wav'></audio>
+        <img id="dog-image" src="assets/puppy.webp">
+        <audio id='dog-sound' src='assets/dog-sound.wav'></audio>
+        <img id="horse-image" src="assets/pony.jpg">
+        <audio id='horse-sound' src='assets/horse-sound.wav'></audio>
     </main>
 
     <footer>
